--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Small Devices (Portrait Phones)  */
+@media (max-width: 480px) {
+  body {
+    font-size: 14px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Medium Devices (Tablets) */
+@media (max-width: 768px) {
+  body {
+    font-size: 16px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+/* Large Devices (Desktops) */
+@media (min-width: 1024px) {
+  body {
+    font-size: 18px;
   }
 }
