--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -1,12 +1,21 @@
-/* src/styles/Navbar.css */
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #f5f5f5;
+  background-color: #2e2d31;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+/* Logo.css */
+.logo {
+  width: 100px; /* Adjust the width as needed */
+  height: 100px; /* Set the same height to maintain a circle */
+  border-radius: 80%; /* Makes the image circular */
+  object-fit: cover; /* Ensures the image covers the area without distortion */
+
+}
+
 
 .logo-container {
   display: flex;
@@ -16,22 +25,24 @@
 .navbar-title {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #333;
+  color: #ffffff;
   margin-left: 10px; /* Space between logo and title */
 }
 
 .nav-links {
-  display: flex;
+  display: flex; /* Set display to flex for horizontal alignment */
   list-style: none;
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
 }
 
 .nav-links li {
-  margin: 0 15px;
+  margin: 0 15px; /* Add margin for spacing between links */
 }
 
 .nav-links a {
   text-decoration: none;
-  color: #333;
+  color: #fffafa;
   font-weight: bold;
   transition: color 0.3s ease;
 }
@@ -43,47 +54,38 @@
 }
 
 .nav-links a:hover {
-  color: #000000; /* Change color on hover */
-
-}
-
-.logo {
-  width: 100px; /* Adjust size as needed */
-  height: 100px; /* Maintain aspect ratio for a perfect circle */
-  border-radius: 50%; /* Makes the image circular */
-  object-fit: cover; /* Ensures the image covers the area without distortion */
-  border: 2px solid #000000; /* Optional: adds a border to match your design */
+  color: #5b9395; /* Change color on hover */
 }
 
 /* Responsive Styles */
 @media (max-width: 768px) {
   .navbar {
-      flex-direction: column;
-      padding: 10px;
+    flex-direction: column; /* Stack logo and links on smaller screens */
+    padding: 10px;
   }
 
   .nav-links {
-      flex-direction: column;
-      align-items: center;
-      margin-top: 10px;
+    flex-direction: column; /* Stack links on smaller screens */
+    align-items: center;
+    margin-top: 10px;
   }
 
   .nav-links li {
-      margin: 10px 0;
+    margin: 10px 0; /* Space out links vertically */
   }
 
   .navbar-title {
-      font-size: 1.2rem;
+    font-size: 1.2rem; /* Smaller title on mobile */
   }
 }
 
 @media (max-width: 480px) {
   .navbar-title {
-      font-size: 1rem;
-      margin-left: 5px;
+    font-size: 1rem; /* Smaller title on mobile */
+    margin-left: 5px;
   }
 
   .nav-links li {
-      margin: 5px 0;
+    margin: 5px 0; /* Space out links vertically */
   }
 }
