--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -25,7 +25,7 @@
 .navbar-title {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #333;
+  color: #eeeaea;
   margin-left: 10px; /* Space between logo and title */
 }
 
@@ -42,7 +42,7 @@
 
 .nav-links a {
   text-decoration: none;
-  color: #333;
+  color: #eeeaea;
   font-weight: bold;
   transition: color 0.3s ease;
 }
@@ -50,11 +50,11 @@
 /* Active link styling */
 .active-link {
   border-bottom: 2px solid #007bff; /* Underline for active link */
-  color: #000000; /* Optional: Change color of active link */
+  color: #e0a800; /* Optional: Change color of active link */
 }
 
 .nav-links a:hover {
-  color: #000000; /* Change color on hover */
+  color: #e0a800; /* Change color on hover */
 }
 
 /* Responsive Styles */
