--- a/client/src/styles/AdminDashboard.css
+++ b/client/src/styles/AdminDashboard.css
@@ -82,4 +82,25 @@
   .actions button:hover {
     background-color: #c82333;
   }
+  table th {
+    font-size: 1.1rem;
+    background-color: #392da1;
+  }
+  
+  table td {
+    color: #666;
+  }
+  
+  table td a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  table td a:hover {
+    text-decoration: underline;
+  }
+  
+  .bookings-table {
+    margin-top: 30px;
+  }
   
